# XScape

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/source/: conf.py  index.md
docs/source/content/: api.md  seascape.md
docs/source/content/_autosummary/: xscape.accessors.XScapeDAAccessor.rst  xscape.accessors.rst  xscape.core.create_xscp_da.rst  xscape.core.get_glorys_ds.rst  xscape.core.get_glorys_var.rst  xscape.core.rst  xscape.plotting.plotting.plot_points.rst  xscape.plotting.plotting.rst  xscape.plotting.rst  xscape.rst  xscape.utils.calculate_horizontal_gridsize.rst  xscape.utils.create_empty_seascape.rst  xscape.utils.generate_points.rst  xscape.utils.get_gridcenter_points.rst  xscape.utils.get_request_extent.rst  xscape.utils.rst
docs/source/content/contributing/: contributing.md  developers.md  doc_writers.md
docs/source/content/usage/: da_format.md  installation.md  quickstart.md
tests/: Glorys.ipynb  Seascape_DS.ipynb  conftest.py  test_utils.py  test_xscp_da.py  test_xscp_km_da.py
xscape/: __init__.py  accessors.py  core.py  testing_utils.py  utils.py
xscape/plotting/: plotting.py
