[project]
name = "xscape"
version = "0.1.0"
description = "A Python library to automatically get the seascape around a set of geographical points, based on Xarray."
authors = [
    {name = "Articoking"}
]
license = "GPL-3-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xarray (>=2025.1.2,<2026.0.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "copernicusmarine (>=2.0.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.1"
cartopy = "^0.24.1"

